--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Rayal Park</title>
+    <title>Pilma Hotels</title>
   </head>
   <body>
     <header class="header">
@@ -250,7 +250,7 @@
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2023 Web Design Mastery. All rights reserved.
+        Copyright © 2025 Pilma Hotels. All rights reserved.
       </div>
     </footer>
 
